[package]
name = "polls"
version = "0.1.0"
authors = ["LordOfPolls <dev@lordofpolls.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version="0.4.38", features = ["serde"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls"] }
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }
dioxus = { version = "0.5", features = ["fullstack", "router"] }
dotenv = "0.15"
# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
getrandom = { version="0.2.14", features=["js"] }


[features]
server = ["dioxus/axum"]
web = ["dioxus/web"]
